@@ -29,7 +29,6 @@ import com.baidu.live.c;
 import com.baidu.live.data.AlaLivePersonData;
 import com.baidu.live.entereffect.http.EnterEffectDynamicListHttpResponsedMessage;
 import com.baidu.live.im.message.ImBarragePayResponseMessage;
-import com.baidu.live.k.a;
 import com.baidu.live.liveroom.messages.AlaMGetLiveStatusHttpResponseMessage;
 import com.baidu.live.message.AlaGetLiveInfoHttpResponseMessage;
 import com.baidu.live.message.AlaGetUserInfoHttpResponseMessage;
@@ -40,6 +39,7 @@ import com.baidu.live.message.GetLiveActivityHttpResponseMessage;
 import com.baidu.live.message.GetQuickGiftHttpResponseMessage;
 import com.baidu.live.message.GetVideoGoodsListHttpResponseMessage;
 import com.baidu.live.message.LiveSyncHttpResponseMessage;
+import com.baidu.live.q.a;
 import com.baidu.live.tbadk.TbConfig;
 import com.baidu.live.tbadk.TbPageContext;
 import com.baidu.live.tbadk.ala.AlaLiveInfoCoreData;
@@ -65,63 +65,62 @@ import java.net.URLDecoder;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import org.apache.http.protocol.HTTP;
-/* loaded from: classes6.dex */
+/* loaded from: classes2.dex */
 public class AlaLiveRoomInitialize {
-    private static CustomMessageListener dTS;
-    private static CustomMessageListener dTT;
-    private static CustomMessageListener dTU;
-    private static HttpMessageListener dTV;
-    private static CustomMessageListener dTW;
-    private static NetMessageListener dTX;
-    private static HttpMessageListener dTY;
-    private static CustomMessageListener dTZ;
-    private static boolean dTP = false;
-    private static boolean dTQ = false;
-    private static BdAlertDialog dTR = null;
-    private static BdUniqueId dFi = BdUniqueId.gen();
+    private static HttpMessageListener eGt;
+    private static HttpMessageListener eJA;
+    private static CustomMessageListener eJB;
+    private static NetMessageListener eJC;
+    private static CustomMessageListener eJD;
+    private static CustomMessageListener eJx;
+    private static CustomMessageListener eJy;
+    private static CustomMessageListener eJz;
+    private static boolean eJu = false;
+    private static boolean eJv = false;
+    private static BdAlertDialog eJw = null;
+    private static BdUniqueId erl = BdUniqueId.gen();
 
     static {
-        aMW();
-        aMX();
-        aMY();
-        aMZ();
-        aNa();
+        beB();
+        beC();
+        beD();
+        beE();
+        beF();
         initTasks();
-        aNb();
-        aNu();
-        dTS = new CustomMessageListener(CmdConfigCustom.MAINTAB_ADD_FRAGMENT) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.1
+        initListeners();
+        beX();
+        eJx = new CustomMessageListener(CmdConfigCustom.MAINTAB_ADD_FRAGMENT) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.1
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
-                boolean unused = AlaLiveRoomInitialize.dTQ = true;
-                AlaLiveRoomInitialize.aNs();
+                boolean unused = AlaLiveRoomInitialize.eJv = true;
+                AlaLiveRoomInitialize.beV();
             }
         };
-        dTT = new CustomMessageListener(2913020) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.6
+        eJy = new CustomMessageListener(2913020) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.6
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
             }
         };
-        dTU = new CustomMessageListener(MessageConfig.CMD_NETWORK_CHANGED) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.7
+        eJz = new CustomMessageListener(MessageConfig.CMD_NETWORK_CHANGED) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.7
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
-                if (!BdNetTypeUtil.isNetWorkAvailable() || !AlaLiveRoomInitialize.dTQ || !AlaLiveRoomInitialize.dTP || MessageManager.getInstance().findTask(2913060) == null) {
+                if (!BdNetTypeUtil.isNetWorkAvailable() || !AlaLiveRoomInitialize.eJv || !AlaLiveRoomInitialize.eJu || MessageManager.getInstance().findTask(2913060) == null) {
                 }
             }
         };
-        dTV = new HttpMessageListener(1021117) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.8
+        eJA = new HttpMessageListener(1021117) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.8
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(HttpResponsedMessage httpResponsedMessage) {
                 if (httpResponsedMessage instanceof AlaPreLoadMarkImgResponseMessage) {
-                    AlaLiveRoomInitialize.bA(((AlaPreLoadMarkImgResponseMessage) httpResponsedMessage).aUD());
+                    AlaLiveRoomInitialize.bz(((AlaPreLoadMarkImgResponseMessage) httpResponsedMessage).bmu());
                 }
             }
         };
-        dTW = new CustomMessageListener(CmdConfigCustom.CMD_LIVE_VIDEO_CLOSED_QUERY) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.9
+        eJB = new CustomMessageListener(CmdConfigCustom.CMD_LIVE_VIDEO_CLOSED_QUERY) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.9
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
@@ -134,7 +133,7 @@ public class AlaLiveRoomInitialize {
                             com.baidu.live.liveroom.messages.a aVar2 = new com.baidu.live.liveroom.messages.a();
                             aVar2.setOriginData(originData);
                             aVar2.setListIds(ids);
-                            aVar2.setTag(AlaLiveRoomInitialize.dFi);
+                            aVar2.setTag(AlaLiveRoomInitialize.erl);
                             aVar2.setParams();
                             MessageManager.getInstance().sendMessageFromBackground(aVar);
                         }
@@ -142,10 +141,10 @@ public class AlaLiveRoomInitialize {
                 }
             }
         };
-        dTX = new NetMessageListener(AlaCmdConfigHttp.CMD_ALA_LIVE_GET_CLOSED_STATUS, AlaCmdConfigSocket.ALA_SOCKET_GET_LIVE_STATUS2) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.10
+        eJC = new NetMessageListener(AlaCmdConfigHttp.CMD_ALA_LIVE_GET_CLOSED_STATUS, AlaCmdConfigSocket.ALA_SOCKET_GET_LIVE_STATUS2) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.10
             @Override // com.baidu.live.adp.framework.listener.NetMessageListener
             public void onMessage(ResponsedMessage<?> responsedMessage) {
-                if (responsedMessage != null && responsedMessage.getOrginalMessage().getTag() == AlaLiveRoomInitialize.dFi) {
+                if (responsedMessage != null && responsedMessage.getOrginalMessage().getTag() == AlaLiveRoomInitialize.erl) {
                     List<Long> list = null;
                     if (responsedMessage instanceof AlaMGetLiveStatusHttpResponseMessage) {
                         list = ((AlaMGetLiveStatusHttpResponseMessage) responsedMessage).getClosedIds();
@@ -156,53 +155,53 @@ public class AlaLiveRoomInitialize {
                 }
             }
         };
-        dTY = new HttpMessageListener(1021039) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.11
+        eGt = new HttpMessageListener(1021039) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.11
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(HttpResponsedMessage httpResponsedMessage) {
                 if (httpResponsedMessage != null) {
-                    final AlaLivePersonData ul = httpResponsedMessage instanceof AlaGetUserInfoHttpResponseMessage ? ((AlaGetUserInfoHttpResponseMessage) httpResponsedMessage).ul() : null;
-                    if (ul != null && ul.mLiveInfo != null) {
-                        if (ul.mLiveInfo.live_id != c.np().getLong("last_live_room_id", 0L) || ul.mLiveInfo.live_status != 1) {
-                            if (AlaLiveRoomInitialize.dTR != null) {
-                                AlaLiveRoomInitialize.dTR.dismiss();
+                    final AlaLivePersonData wg = httpResponsedMessage instanceof AlaGetUserInfoHttpResponseMessage ? ((AlaGetUserInfoHttpResponseMessage) httpResponsedMessage).wg() : null;
+                    if (wg != null && wg.mLiveInfo != null) {
+                        if (wg.mLiveInfo.live_id != c.oI().getLong("last_live_room_id", 0L) || wg.mLiveInfo.live_status != 1) {
+                            if (AlaLiveRoomInitialize.eJw != null) {
+                                AlaLiveRoomInitialize.eJw.dismiss();
                             }
-                            BdAlertDialog unused = AlaLiveRoomInitialize.dTR = null;
-                            AlaLiveRoomInitialize.aNt();
-                            AlaLiveRoomInitialize.aNr();
+                            BdAlertDialog unused = AlaLiveRoomInitialize.eJw = null;
+                            AlaLiveRoomInitialize.beW();
+                            AlaLiveRoomInitialize.beU();
                             return;
                         }
-                        if (AlaLiveRoomInitialize.dTR == null || !AlaLiveRoomInitialize.dTR.isShowing()) {
+                        if (AlaLiveRoomInitialize.eJw == null || !AlaLiveRoomInitialize.eJw.isShowing()) {
                             SafeHandler.getInst().postDelayed(new Runnable() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.11.1
                                 @Override // java.lang.Runnable
                                 public void run() {
-                                    AlaLiveRoomInitialize.a(ul);
+                                    AlaLiveRoomInitialize.b(wg);
                                 }
                             }, 100L);
                         }
-                        AlaLiveRoomInitialize.aNr();
+                        AlaLiveRoomInitialize.beU();
                     }
                 }
             }
         };
-        dTZ = new CustomMessageListener(CmdConfigCustom.METHOD_ACCOUNT_CHANGE_STICKY) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.4
+        eJD = new CustomMessageListener(CmdConfigCustom.METHOD_ACCOUNT_CHANGE_STICKY) { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.4
             /* JADX DEBUG: Method merged with bridge method */
             @Override // com.baidu.live.adp.framework.listener.MessageListener
             public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
-                boolean unused = AlaLiveRoomInitialize.dTP = true;
-                if (AlaLiveRoomInitialize.dTQ) {
+                boolean unused = AlaLiveRoomInitialize.eJu = true;
+                if (AlaLiveRoomInitialize.eJv) {
                 }
                 SafeHandler.getInst().post(new Runnable() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.4.1
                     @Override // java.lang.Runnable
                     public void run() {
-                        MessageManager.getInstance().unRegisterListener(AlaLiveRoomInitialize.dTZ);
+                        MessageManager.getInstance().unRegisterListener(AlaLiveRoomInitialize.eJD);
                     }
                 });
             }
         };
     }
 
-    private static void aMW() {
+    private static void beB() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(AlaCmdConfigHttp.CMD_ALA_SYNC, TbConfig.SERVER_ADDRESS + "ala/sys/sync");
         tbHttpMessageTask.setResponsedClass(AlaSyncHttpResponseMessage.class);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -210,7 +209,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aMX() {
+    private static void beC() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021132, TbConfig.SERVER_HOST + "liveserver/sys/sync");
         tbHttpMessageTask.setResponsedClass(LiveSyncHttpResponseMessage.class);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -218,7 +217,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aMY() {
+    private static void beD() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021122, TbConfig.SERVER_ADDRESS + "ala/web/demo/getLiveActivity");
         tbHttpMessageTask.setResponsedClass(GetLiveActivityHttpResponseMessage.class);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -230,7 +229,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aMZ() {
+    private static void beE() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021126, TbConfig.SERVER_ADDRESS + "ala/web/activityRank/getActivityPendantRank");
         tbHttpMessageTask.setResponsedClass(GetLiveActivityDynamicHttpResponseMessage.class);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -239,7 +238,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNa() {
+    private static void beF() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021124, TbConfig.SERVER_ADDRESS + "ala/sdk/v1/open/getQuickGift");
         tbHttpMessageTask.setResponsedClass(GetQuickGiftHttpResponseMessage.class);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -248,46 +247,46 @@ public class AlaLiveRoomInitialize {
     }
 
     private static void initTasks() {
-        aNc();
-        aNd();
-        aNe();
-        aNf();
-        aNg();
+        beG();
+        beH();
+        beI();
+        beJ();
+        beK();
         if (TbadkCoreApplication.getInst().isMainProcess(true)) {
-            aNh();
-            aNi();
+            bdZ();
+            beL();
         }
-        aNj();
-        aNk();
-        aNl();
-        aNm();
-        aNn();
-        aNo();
-        aNp();
-        aNq();
+        beM();
+        beN();
+        beO();
+        beP();
+        beQ();
+        beR();
+        beS();
+        beT();
     }
 
-    private static void aNb() {
+    private static void initListeners() {
         if (TbadkCoreApplication.getInst().isMainProcess(true)) {
-            MessageManager.getInstance().registerListener(dTS);
-            MessageManager.getInstance().registerListener(dTT);
-            MessageManager.getInstance().registerListener(dTU);
-            MessageManager.getInstance().registerListener(dTV);
-            MessageManager.getInstance().registerListener(dTX);
-            MessageManager.getInstance().registerListener(dTW);
-            MessageManager.getInstance().registerListener(dTZ);
+            MessageManager.getInstance().registerListener(eJx);
+            MessageManager.getInstance().registerListener(eJy);
+            MessageManager.getInstance().registerListener(eJz);
+            MessageManager.getInstance().registerListener(eJA);
+            MessageManager.getInstance().registerListener(eJC);
+            MessageManager.getInstance().registerListener(eJB);
+            MessageManager.getInstance().registerListener(eJD);
         }
     }
 
-    private static void aNc() {
+    private static void beG() {
         com.baidu.live.tieba.f.a.a.a(1021007, "ala/live/getLiveInfo", AlaGetLiveInfoHttpResponseMessage.class, false, true, true, true);
     }
 
-    private static void aNd() {
+    private static void beH() {
         com.baidu.live.tieba.f.a.a.a(AlaCmdConfigHttp.CMD_ALA_LIVE_GET_CLOSED_STATUS, "ala/live/mgetLiveStatus", AlaMGetLiveStatusHttpResponseMessage.class, false, true, true, true);
     }
 
-    private static void aNe() {
+    private static void beI() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021036, TbConfig.SERVER_ADDRESS + "ala/live/closeLive");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -297,7 +296,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerStickyMode(1021036);
     }
 
-    private static void aNf() {
+    private static void beJ() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1003303, TbConfig.SERVER_ADDRESS + "ala/sys/strategy");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -307,7 +306,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerStickyMode(1003303);
     }
 
-    private static void aNg() {
+    private static void beK() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021117, TbConfig.SERVER_ADDRESS + "ala/sys/getAllMarkPictList");
         tbHttpMessageTask.setIsNeedTbs(true);
         tbHttpMessageTask.setIsUseCurrentBDUSS(true);
@@ -315,7 +314,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNh() {
+    private static void bdZ() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021039, TbConfig.SERVER_ADDRESS + "ala/user/getUserInfoSDK");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -324,7 +323,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNi() {
+    private static void beL() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021040, TbConfig.SERVER_ADDRESS + "ala/sys/reliveLog");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -332,7 +331,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNj() {
+    private static void beM() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021127, TbConfig.SERVER_ADDRESS + "ala/live/activityTaskWatch");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -342,17 +341,17 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNk() {
+    private static void beN() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021128, TbConfig.SERVER_ADDRESS + "ala/live/sendNoticeIm");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
         tbHttpMessageTask.setIsUseCurrentBDUSS(true);
         tbHttpMessageTask.setMethod(HttpMessageTask.HTTP_METHOD.POST);
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
-        com.baidu.live.f.a.init();
+        com.baidu.live.j.a.init();
     }
 
-    private static void aNl() {
+    private static void beO() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021045, TbConfig.SERVER_ADDRESS + "ala/share/shareMsg");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -361,7 +360,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNm() {
+    private static void beP() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(AlaCmdConfigHttp.CMD_ALA_GET_ENTER_EFFECT, TbConfig.SERVER_HOST + "liveserver/pay/barrage");
         tbHttpMessageTask.setIsNeedLogin(true);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -371,7 +370,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNn() {
+    private static void beQ() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(AlaCmdConfigHttp.CMD_ALA_GET_TAB_LIVE_INFO, TbConfig.SERVER_ADDRESS + "ala/sdk/v1/open/getRmbLiveEnterEffectList");
         tbHttpMessageTask.setIsNeedLogin(false);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -380,7 +379,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNo() {
+    private static void beR() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021144, TbConfig.SERVER_HOST + "liveserver/livegoods/getvideogoodslist");
         tbHttpMessageTask.setIsNeedLogin(false);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -390,7 +389,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNp() {
+    private static void beS() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(AlaCmdConfigHttp.CMD_ALA_ENTER_EFFECT_BUY_PROP, TbConfig.SERVER_HOST + "liveserver/sys/eventpolling");
         tbHttpMessageTask.setIsNeedLogin(false);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -400,7 +399,7 @@ public class AlaLiveRoomInitialize {
         MessageManager.getInstance().registerTask(tbHttpMessageTask);
     }
 
-    private static void aNq() {
+    private static void beT() {
         TbHttpMessageTask tbHttpMessageTask = new TbHttpMessageTask(1021155, TbConfig.SERVER_HOST + "liveserver/rotaryTable/getLuckyMomentsInfoForMobile");
         tbHttpMessageTask.setIsNeedLogin(false);
         tbHttpMessageTask.setIsNeedTbs(true);
@@ -411,26 +410,26 @@ public class AlaLiveRoomInitialize {
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public static void aNr() {
+    public static void beU() {
         SafeHandler.getInst().post(new Runnable() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.12
             @Override // java.lang.Runnable
             public void run() {
-                MessageManager.getInstance().unRegisterListener(AlaLiveRoomInitialize.dTY);
+                MessageManager.getInstance().unRegisterListener(AlaLiveRoomInitialize.eGt);
             }
         });
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public static void aNs() {
-        if (System.currentTimeMillis() - c.np().getLong("ala_last_pre_load_marg_img_time", 0L) >= 21600000) {
+    public static void beV() {
+        if (System.currentTimeMillis() - c.oI().getLong("ala_last_pre_load_marg_img_time", 0L) >= 21600000) {
             MessageManager.getInstance().sendMessage(new HttpMessage(1021117));
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public static void bA(List<String> list) {
+    public static void bz(List<String> list) {
         if (!ListUtils.isEmpty(list)) {
-            c.np().putLong("ala_last_pre_load_marg_img_time", System.currentTimeMillis());
+            c.oI().putLong("ala_last_pre_load_marg_img_time", System.currentTimeMillis());
             for (String str : list) {
                 if (!TextUtils.isEmpty(str)) {
                     BdResourceLoader.getInstance().loadResource(str, 10, null, null);
@@ -440,7 +439,7 @@ public class AlaLiveRoomInitialize {
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public static void cc(long j) {
+    public static void cI(long j) {
         HttpMessage httpMessage = new HttpMessage(1021040);
         httpMessage.addParam("live_id", j);
         httpMessage.addParam("is_cancel", 1);
@@ -453,53 +452,53 @@ public class AlaLiveRoomInitialize {
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public static void a(final AlaLivePersonData alaLivePersonData) {
+    public static void b(final AlaLivePersonData alaLivePersonData) {
         final Activity currentActivity = BdActivityStack.getInst().currentActivity();
         if (currentActivity instanceof BdPageContextSupport) {
-            if (dTR != null) {
-                dTR.dismiss();
+            if (eJw != null) {
+                eJw.dismiss();
             }
-            dTR = new BdAlertDialog(currentActivity);
+            eJw = new BdAlertDialog(currentActivity);
             TbadkCoreApplication.getInst().getContext();
-            dTR.setMessageId(a.i.sdk_crash_reopen_tips);
-            dTR.setOnCalcelListener(new DialogInterface.OnCancelListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.13
+            eJw.setMessageId(a.i.sdk_crash_reopen_tips);
+            eJw.setOnCalcelListener(new DialogInterface.OnCancelListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.13
                 @Override // android.content.DialogInterface.OnCancelListener
                 public void onCancel(DialogInterface dialogInterface) {
-                    AlaLiveRoomInitialize.cc(AlaLivePersonData.this.mLiveInfo.live_id);
-                    BdAlertDialog unused = AlaLiveRoomInitialize.dTR = null;
+                    AlaLiveRoomInitialize.cI(AlaLivePersonData.this.mLiveInfo.live_id);
+                    BdAlertDialog unused = AlaLiveRoomInitialize.eJw = null;
                 }
             });
-            dTR.setPositiveButton(a.i.sdk_reconnect, new BdAlertDialog.OnClickListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.2
+            eJw.setPositiveButton(a.i.sdk_reconnect, new BdAlertDialog.OnClickListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.2
                 @Override // com.baidu.live.tbadk.core.dialog.BdAlertDialog.OnClickListener
                 public void onClick(BdAlertDialog bdAlertDialog) {
                     bdAlertDialog.dismiss();
                     MessageManager.getInstance().sendMessage(new CustomMessage((int) CmdConfigCustom.START_GO_ACTION, new AlaMasterLiveRoomActivityConfig(currentActivity, alaLivePersonData)));
-                    AlaLiveRoomInitialize.aNt();
-                    BdAlertDialog unused = AlaLiveRoomInitialize.dTR = null;
+                    AlaLiveRoomInitialize.beW();
+                    BdAlertDialog unused = AlaLiveRoomInitialize.eJw = null;
                 }
             });
-            dTR.setNegativeButton(a.i.sdk_cancel, new BdAlertDialog.OnClickListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.3
+            eJw.setNegativeButton(a.i.sdk_cancel, new BdAlertDialog.OnClickListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.3
                 @Override // com.baidu.live.tbadk.core.dialog.BdAlertDialog.OnClickListener
                 public void onClick(BdAlertDialog bdAlertDialog) {
-                    AlaLiveRoomInitialize.aNt();
+                    AlaLiveRoomInitialize.beW();
                     bdAlertDialog.dismiss();
-                    AlaLiveRoomInitialize.cc(AlaLivePersonData.this.mLiveInfo.live_id);
-                    BdAlertDialog unused = AlaLiveRoomInitialize.dTR = null;
+                    AlaLiveRoomInitialize.cI(AlaLivePersonData.this.mLiveInfo.live_id);
+                    BdAlertDialog unused = AlaLiveRoomInitialize.eJw = null;
                 }
             });
-            dTR.isShowTitleAndMessage();
-            dTR.create(((BdPageContextSupport) currentActivity).getPageContext());
-            dTR.show();
+            eJw.isShowTitleAndMessage();
+            eJw.create(((BdPageContextSupport) currentActivity).getPageContext());
+            eJw.show();
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public static void aNt() {
-        c.np().putLong("last_live_room_id", 0L);
-        c.np().putString("last_live_room_from", "");
+    public static void beW() {
+        c.oI().putLong("last_live_room_id", 0L);
+        c.oI().putString("last_live_room_from", "");
     }
 
-    private static void aNu() {
+    private static void beX() {
         UrlManager.getInstance().addListener(new UrlManager.UrlDealListener() { // from class: com.baidu.tieba.ala.liveroom.AlaLiveRoomInitialize.5
             @Override // com.baidu.live.tbadk.core.util.UrlManager.UrlDealListener
             public int deal(TbPageContext<?> tbPageContext, String[] strArr) {
@@ -512,13 +511,13 @@ public class AlaLiveRoomInitialize {
                     return 3;
                 }
                 if (str.startsWith(UrlSchemaHelper.SCHEMA_TYPE_TB_CLIENT_ZM)) {
-                    long j = c.np().getLong("zm_cert_id", 0L);
+                    long j = c.oI().getLong("zm_cert_id", 0L);
                     if (j != 0) {
-                        com.baidu.live.e.a aVar = new com.baidu.live.e.a();
-                        aVar.cN(Long.toString(j));
-                        aVar.release();
+                        com.baidu.live.i.b bVar = new com.baidu.live.i.b();
+                        bVar.dF(Long.toString(j));
+                        bVar.release();
                     }
-                    c.np().putLong("zm_cert_id", 0L);
+                    c.oI().putLong("zm_cert_id", 0L);
                     return 0;
                 }
                 if (str.startsWith(UrlSchemaHelper.SCHEMA_TYPE_TB_CLIENT)) {
@@ -529,7 +528,7 @@ public class AlaLiveRoomInitialize {
                         if (StringUtils.isNull(str2)) {
                             if (!StringUtils.isNull(str3)) {
                                 try {
-                                    String decode = URLDecoder.decode(str3, HTTP.UTF_8);
+                                    String decode = URLDecoder.decode(str3, "UTF-8");
                                     if (StringUtils.isNull(str4)) {
                                         str4 = "";
                                     }
@@ -554,7 +553,7 @@ public class AlaLiveRoomInitialize {
                         alaLiveInfoCoreData.liveID = valueOf.longValue();
                         try {
                             if (!StringUtils.isNull(str4)) {
-                                alaLiveInfoCoreData.rtmpUrl = URLDecoder.decode(str4, HTTP.UTF_8);
+                                alaLiveInfoCoreData.rtmpUrl = URLDecoder.decode(str4, "UTF-8");
                             }
                         } catch (UnsupportedEncodingException e2) {
                             e2.printStackTrace();
@@ -582,12 +581,12 @@ public class AlaLiveRoomInitialize {
                         }
                         AlaLiveRoomActivityConfig alaLiveRoomActivityConfig3 = new AlaLiveRoomActivityConfig(tbPageContext.getPageActivity());
                         alaLiveRoomActivityConfig3.addExtraByUrl("", matchStringFromURL, "active_view_jump_live_room");
-                        MessageManager.getInstance().sendMessage(new CustomMessage((int) CmdConfigCustom.START_GO_ACTION, alaLiveRoomActivityConfig3));
+                        MessageManager.getInstance().sendMessage(new CustomMessage((int) CmdConfigCustom.CMD_ALA_LIVE_ROOM_START, alaLiveRoomActivityConfig3));
                         return 1;
                     }
                     AlaLiveRoomActivityConfig alaLiveRoomActivityConfig4 = new AlaLiveRoomActivityConfig(tbPageContext.getPageActivity());
                     alaLiveRoomActivityConfig4.addExtraByLiveId(j2, "", "active_view_jump_live_room");
-                    MessageManager.getInstance().sendMessage(new CustomMessage((int) CmdConfigCustom.START_GO_ACTION, alaLiveRoomActivityConfig4));
+                    MessageManager.getInstance().sendMessage(new CustomMessage((int) CmdConfigCustom.CMD_ALA_LIVE_ROOM_START, alaLiveRoomActivityConfig4));
                     return 1;
                 }
                 return 3;
