@@ -10,7 +10,7 @@ import android.widget.FrameLayout;
 import android.widget.TextView;
 import com.baidu.live.adp.lib.util.BdNetTypeUtil;
 import com.baidu.live.adp.lib.util.StringUtils;
-import com.baidu.live.k.a;
+import com.baidu.live.q.a;
 import com.baidu.live.tbadk.TbPageContext;
 import com.baidu.live.tbadk.core.TbadkCoreApplication;
 import com.baidu.live.tbadk.core.sharedpref.SharedPrefHelper;
@@ -23,167 +23,166 @@ import com.baidu.live.view.AlaDoubleStateImageView;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import org.apache.http.HttpHost;
-import org.apache.http.protocol.HTTP;
-/* loaded from: classes6.dex */
+/* loaded from: classes2.dex */
 public class d {
-    private IShareCallback ejA;
-    private AlaDoubleStateImageView enA;
-    private View enB;
-    private TextView enC;
-    private View enw;
-    private AlaDoubleStateImageView enx;
-    private AlaDoubleStateImageView eny;
-    private AlaDoubleStateImageView enz;
-    private TbPageContext mPageContext;
-    private ViewGroup mRootView;
-    private IShareChannel mShareChannel;
-    private int enD = -1;
-    private Runnable enE = new Runnable() { // from class: com.baidu.tieba.ala.liveroom.share.d.1
+    private IShareCallback eZN;
+    private View fdW;
+    private AlaDoubleStateImageView fdX;
+    private AlaDoubleStateImageView fdY;
+    private AlaDoubleStateImageView fdZ;
+    private AlaDoubleStateImageView fea;
+    private View feb;
+    private TextView fec;
+    private int fed = -1;
+    private Runnable fee = new Runnable() { // from class: com.baidu.tieba.ala.liveroom.share.d.1
         @Override // java.lang.Runnable
         public void run() {
-            d.this.aVX();
+            d.this.bnM();
         }
     };
-    private View.OnClickListener enF = new View.OnClickListener() { // from class: com.baidu.tieba.ala.liveroom.share.d.2
+    private View.OnClickListener fef = new View.OnClickListener() { // from class: com.baidu.tieba.ala.liveroom.share.d.2
         @Override // android.view.View.OnClickListener
         public void onClick(View view) {
             boolean z;
             int[] iArr = new int[2];
             if (view.getId() == a.g.ala_prepare_share_img_sina_weibo) {
-                boolean z2 = !d.this.enx.isSelected();
-                d.this.enx.setSelect(z2);
-                d.this.eny.setSelect(false);
-                d.this.enz.setSelect(false);
-                d.this.enA.setSelect(false);
-                d.this.ih(false);
+                boolean z2 = !d.this.fdX.isSelected();
+                d.this.fdX.setSelect(z2);
+                d.this.fdY.setSelect(false);
+                d.this.fdZ.setSelect(false);
+                d.this.fea.setSelect(false);
+                d.this.jy(false);
                 if (z2) {
-                    d.this.enD = 1;
-                    d.this.enx.getLocationOnScreen(iArr);
-                    d.this.a("weibo_show", iArr, d.this.enx);
+                    d.this.fed = 1;
+                    d.this.fdX.getLocationOnScreen(iArr);
+                    d.this.a("weibo_show", iArr, d.this.fdX);
                     LogManager.getLiveRecordLogger().doClickLiveShareToWeiboButtonLog("");
                     return;
                 }
-                d.this.enD = -1;
-                d.this.aVX();
+                d.this.fed = -1;
+                d.this.bnM();
             } else if (view.getId() == a.g.ala_prepare_share_img_weixin) {
-                z = d.this.eny.isSelected() ? false : true;
-                d.this.eny.setSelect(z);
-                d.this.enx.setSelect(false);
-                d.this.enz.setSelect(false);
-                d.this.enA.setSelect(false);
-                d.this.ih(false);
+                z = d.this.fdY.isSelected() ? false : true;
+                d.this.fdY.setSelect(z);
+                d.this.fdX.setSelect(false);
+                d.this.fdZ.setSelect(false);
+                d.this.fea.setSelect(false);
+                d.this.jy(false);
                 if (z) {
-                    d.this.enD = 2;
-                    d.this.eny.getLocationOnScreen(iArr);
-                    d.this.a("weixin_show", iArr, d.this.eny);
+                    d.this.fed = 2;
+                    d.this.fdY.getLocationOnScreen(iArr);
+                    d.this.a("weixin_show", iArr, d.this.fdY);
                     LogManager.getLiveRecordLogger().doClickLiveShareWeixinButtonLog("");
                     return;
                 }
-                d.this.enD = -1;
-                d.this.aVX();
+                d.this.fed = -1;
+                d.this.bnM();
             } else if (view.getId() == a.g.ala_prepare_share_img_weixin_circle) {
-                boolean z3 = !d.this.enz.isSelected();
-                d.this.enz.setSelect(z3);
-                d.this.enx.setSelect(false);
-                d.this.eny.setSelect(false);
-                d.this.enA.setSelect(false);
-                d.this.ih(true);
+                boolean z3 = !d.this.fdZ.isSelected();
+                d.this.fdZ.setSelect(z3);
+                d.this.fdX.setSelect(false);
+                d.this.fdY.setSelect(false);
+                d.this.fea.setSelect(false);
+                d.this.jy(true);
                 if (z3) {
-                    d.this.enD = 3;
-                    d.this.enz.getLocationOnScreen(iArr);
-                    d.this.a("circle_show", iArr, d.this.enz);
+                    d.this.fed = 3;
+                    d.this.fdZ.getLocationOnScreen(iArr);
+                    d.this.a("circle_show", iArr, d.this.fdZ);
                     LogManager.getLiveRecordLogger().doClickLiveShareToTimeLineButtonLog("");
                     return;
                 }
-                d.this.enD = -1;
-                d.this.aVX();
+                d.this.fed = -1;
+                d.this.bnM();
             } else if (view.getId() == a.g.ala_prepare_share_img_qq) {
-                z = d.this.enA.isSelected() ? false : true;
-                d.this.enA.setSelect(z);
-                d.this.enx.setSelect(false);
-                d.this.enz.setSelect(false);
-                d.this.eny.setSelect(false);
-                d.this.ih(false);
+                z = d.this.fea.isSelected() ? false : true;
+                d.this.fea.setSelect(z);
+                d.this.fdX.setSelect(false);
+                d.this.fdZ.setSelect(false);
+                d.this.fdY.setSelect(false);
+                d.this.jy(false);
                 if (z) {
-                    d.this.enD = 4;
-                    d.this.enA.getLocationOnScreen(iArr);
-                    d.this.a("qq_show", iArr, d.this.enA);
+                    d.this.fed = 4;
+                    d.this.fea.getLocationOnScreen(iArr);
+                    d.this.a("qq_show", iArr, d.this.fea);
                     LogManager.getLiveRecordLogger().doClickLiveShareToQQButtonLog("");
                     return;
                 }
-                d.this.enD = -1;
-                d.this.aVX();
+                d.this.fed = -1;
+                d.this.bnM();
             }
         }
     };
     private Handler mHandler = new Handler();
+    private TbPageContext mPageContext;
+    private ViewGroup mRootView;
+    private IShareChannel mShareChannel;
 
     /* JADX INFO: Access modifiers changed from: private */
     public void a(String str, int[] iArr, View view) {
-        if (com.baidu.live.c.np().getBoolean(str, true)) {
-            d(iArr, view.getWidth(), view.getHeight());
-            com.baidu.live.c.np().putBoolean(str, false);
+        if (com.baidu.live.c.oI().getBoolean(str, true)) {
+            c(iArr, view.getWidth(), view.getHeight());
+            com.baidu.live.c.oI().putBoolean(str, false);
             return;
         }
-        aVX();
+        bnM();
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void ih(boolean z) {
-        this.enB.setBackgroundResource(z ? a.f.pic_live_beginshow_bubble_3 : a.f.pic_live_beginshow_bubble_2);
+    public void jy(boolean z) {
+        this.feb.setBackgroundResource(z ? a.f.pic_live_beginshow_bubble_3 : a.f.pic_live_beginshow_bubble_2);
     }
 
     public d(TbPageContext tbPageContext) {
         this.mPageContext = tbPageContext;
-        aVV();
+        bnK();
         this.mShareChannel = ShareSingleManager.getInstance().buildShareChannel();
     }
 
-    public void aj(ViewGroup viewGroup) {
+    public void ai(ViewGroup viewGroup) {
         this.mRootView = viewGroup;
     }
 
-    public void by(View view) {
-        this.enw = view;
-        this.enx = (AlaDoubleStateImageView) this.enw.findViewById(a.g.ala_prepare_share_img_sina_weibo);
-        this.enx.setImageSrc(a.f.icon_live_share_sina_n, a.f.icon_live_share_sina_s);
-        this.enx.setOnClickListener(this.enF);
-        this.eny = (AlaDoubleStateImageView) this.enw.findViewById(a.g.ala_prepare_share_img_weixin);
-        this.eny.setImageSrc(a.f.icon_live_share_weixin_n, a.f.icon_live_share_weixin_s);
-        this.eny.setOnClickListener(this.enF);
-        this.enz = (AlaDoubleStateImageView) this.enw.findViewById(a.g.ala_prepare_share_img_weixin_circle);
-        this.enz.setImageSrc(a.f.icon_live_share_quan_n, a.f.icon_live_share_quan_s);
-        this.enz.setOnClickListener(this.enF);
-        this.enA = (AlaDoubleStateImageView) this.enw.findViewById(a.g.ala_prepare_share_img_qq);
-        this.enA.setImageSrc(a.f.icon_live_share_qq_n, a.f.icon_live_share_qq_s);
-        this.enA.setOnClickListener(this.enF);
-        switch (this.enD) {
+    public void bv(View view) {
+        this.fdW = view;
+        this.fdX = (AlaDoubleStateImageView) this.fdW.findViewById(a.g.ala_prepare_share_img_sina_weibo);
+        this.fdX.setImageSrc(a.f.icon_live_share_sina_n, a.f.icon_live_share_sina_s);
+        this.fdX.setOnClickListener(this.fef);
+        this.fdY = (AlaDoubleStateImageView) this.fdW.findViewById(a.g.ala_prepare_share_img_weixin);
+        this.fdY.setImageSrc(a.f.icon_live_share_weixin_n, a.f.icon_live_share_weixin_s);
+        this.fdY.setOnClickListener(this.fef);
+        this.fdZ = (AlaDoubleStateImageView) this.fdW.findViewById(a.g.ala_prepare_share_img_weixin_circle);
+        this.fdZ.setImageSrc(a.f.icon_live_share_quan_n, a.f.icon_live_share_quan_s);
+        this.fdZ.setOnClickListener(this.fef);
+        this.fea = (AlaDoubleStateImageView) this.fdW.findViewById(a.g.ala_prepare_share_img_qq);
+        this.fea.setImageSrc(a.f.icon_live_share_qq_n, a.f.icon_live_share_qq_s);
+        this.fea.setOnClickListener(this.fef);
+        switch (this.fed) {
             case 1:
-                this.enx.setSelect(true);
+                this.fdX.setSelect(true);
                 break;
             case 2:
-                this.eny.setSelect(true);
+                this.fdY.setSelect(true);
                 break;
             case 3:
-                this.enz.setSelect(true);
+                this.fdZ.setSelect(true);
                 break;
             case 4:
-                this.enA.setSelect(true);
+                this.fea.setSelect(true);
                 break;
         }
-        this.enB = LayoutInflater.from(this.mPageContext.getPageActivity()).inflate(a.h.ala_prepare_share_tip_view, this.mRootView, false);
-        this.enC = (TextView) this.enB.findViewById(a.g.tip_tv);
+        this.feb = LayoutInflater.from(this.mPageContext.getPageActivity()).inflate(a.h.ala_prepare_share_tip_view, this.mRootView, false);
+        this.fec = (TextView) this.feb.findViewById(a.g.tip_tv);
     }
 
     public void a(IShareCallback iShareCallback) {
-        this.ejA = iShareCallback;
+        this.eZN = iShareCallback;
     }
 
-    public boolean aRF() {
-        return this.mShareChannel != null && this.enD >= 1 && this.enD <= 4;
+    public boolean bjg() {
+        return this.mShareChannel != null && this.fed >= 1 && this.fed <= 4;
     }
 
-    public void q(String str, String str2, String str3, String str4) {
+    public void s(String str, String str2, String str3, String str4) {
         if (!BdNetTypeUtil.isNetWorkAvailable()) {
             this.mPageContext.showToast(a.i.share_on_no_network);
             return;
@@ -195,36 +194,36 @@ public class d {
             this.mPageContext.showToast(a.i.share_no_channel);
             return;
         }
-        ShareEntity ub = ub(str);
-        if (ub != null) {
-            switch (this.enD) {
+        ShareEntity yS = yS(str);
+        if (yS != null) {
+            switch (this.fed) {
                 case 1:
                     if (!TextUtils.isEmpty(str3) && str3.contains("直播标题")) {
                         if (!TextUtils.isEmpty(str2)) {
-                            ub.content = str3.replace("直播标题", str2);
+                            yS.content = str3.replace("直播标题", str2);
                         } else {
-                            ub.content = str3;
+                            yS.content = str3;
                         }
                     }
                     if (TbadkCoreApplication.getInst().isTieba()) {
-                        ub.title = "腻害了";
+                        yS.title = "腻害了";
                     }
-                    a(ub);
+                    a(yS);
                     return;
                 case 2:
-                    ub.content = str2;
-                    ub.title = str4;
-                    b(ub);
+                    yS.content = str2;
+                    yS.title = str4;
+                    b(yS);
                     return;
                 case 3:
-                    ub.content = str2;
-                    ub.title = str4;
-                    c(ub);
+                    yS.content = str2;
+                    yS.title = str4;
+                    c(yS);
                     return;
                 case 4:
-                    ub.content = str2;
-                    ub.title = str4;
-                    d(ub);
+                    yS.content = str2;
+                    yS.title = str4;
+                    d(yS);
                     return;
                 default:
                     return;
@@ -232,7 +231,7 @@ public class d {
         }
     }
 
-    private ShareEntity ub(String str) {
+    private ShareEntity yS(String str) {
         String str2;
         ShareEntity shareEntity = new ShareEntity();
         String currentAccountName = TbadkCoreApplication.getCurrentAccountName();
@@ -243,16 +242,16 @@ public class d {
             }
         }
         String shareUrl = getShareUrl();
-        String uc = uc(currentAccountName);
+        String yT = yT(currentAccountName);
         if (shareUrl.contains("?")) {
-            str2 = shareUrl + "&uname=" + uc;
+            str2 = shareUrl + "&uname=" + yT;
         } else {
-            str2 = shareUrl + "?uname=" + uc;
+            str2 = shareUrl + "?uname=" + yT;
         }
         Log.i("AlaShareController", "@@  " + str2);
         shareEntity.imageUrl = str;
         shareEntity.linkUrl = str2;
-        shareEntity.shareType = this.enD;
+        shareEntity.shareType = this.fed;
         return shareEntity;
     }
 
@@ -266,42 +265,42 @@ public class d {
         return "http://tieba.baidu.com/ala/share/index";
     }
 
-    private String uc(String str) {
+    private String yT(String str) {
         try {
-            return URLEncoder.encode(str, HTTP.UTF_8);
+            return URLEncoder.encode(str, "UTF-8");
         } catch (UnsupportedEncodingException e) {
             return str;
         }
     }
 
     private void a(ShareEntity shareEntity) {
-        this.mShareChannel.shareToSinaWeibo(shareEntity, this.ejA);
+        this.mShareChannel.shareToSinaWeibo(shareEntity, this.eZN);
     }
 
     private void b(ShareEntity shareEntity) {
-        this.mShareChannel.shareToWeixin(shareEntity, this.ejA);
+        this.mShareChannel.shareToWeixin(shareEntity, this.eZN);
     }
 
     private void c(ShareEntity shareEntity) {
-        this.mShareChannel.shareToWeixinCircle(shareEntity, this.ejA);
+        this.mShareChannel.shareToWeixinCircle(shareEntity, this.eZN);
     }
 
     private void d(ShareEntity shareEntity) {
-        this.mShareChannel.shareToQQ(shareEntity, this.ejA);
+        this.mShareChannel.shareToQQ(shareEntity, this.eZN);
     }
 
-    private void aVV() {
-        this.enD = SharedPrefHelper.getInstance().getInt("prepare_share_type", -1);
+    private void bnK() {
+        this.fed = SharedPrefHelper.getInstance().getInt("prepare_share_type", -1);
     }
 
-    private void d(final int[] iArr, final int i, final int i2) {
-        aVW();
-        if (this.enB.getParent() != null) {
-            ((ViewGroup) this.enB.getParent()).removeView(this.enB);
+    private void c(final int[] iArr, final int i, final int i2) {
+        bnL();
+        if (this.feb.getParent() != null) {
+            ((ViewGroup) this.feb.getParent()).removeView(this.feb);
         }
-        this.mRootView.addView(this.enB);
-        this.enB.setVisibility(4);
-        this.enB.post(new Runnable() { // from class: com.baidu.tieba.ala.liveroom.share.d.3
+        this.mRootView.addView(this.feb);
+        this.feb.setVisibility(4);
+        this.feb.post(new Runnable() { // from class: com.baidu.tieba.ala.liveroom.share.d.3
             @Override // java.lang.Runnable
             public void run() {
                 int[] iArr2 = new int[2];
@@ -309,24 +308,24 @@ public class d {
                 if (iArr[0] > 0 && iArr[1] > 0) {
                     iArr[0] = iArr[0] - iArr2[0];
                     iArr[1] = iArr[1] - iArr2[1];
-                    FrameLayout.LayoutParams layoutParams = (FrameLayout.LayoutParams) d.this.enB.getLayoutParams();
+                    FrameLayout.LayoutParams layoutParams = (FrameLayout.LayoutParams) d.this.feb.getLayoutParams();
                     if (layoutParams == null) {
                         layoutParams = new FrameLayout.LayoutParams(-2, -2);
                     }
-                    layoutParams.leftMargin = (iArr[0] + (i / 2)) - (d.this.enB.getWidth() / 2);
+                    layoutParams.leftMargin = (iArr[0] + (i / 2)) - (d.this.feb.getWidth() / 2);
                     layoutParams.topMargin = iArr[1] + i2;
-                    d.this.enB.setLayoutParams(layoutParams);
-                    d.this.enB.setVisibility(0);
+                    d.this.feb.setLayoutParams(layoutParams);
+                    d.this.feb.setVisibility(0);
                 }
             }
         });
-        this.mHandler.removeCallbacks(this.enE);
-        this.mHandler.postDelayed(this.enE, 5000L);
+        this.mHandler.removeCallbacks(this.fee);
+        this.mHandler.postDelayed(this.fee, 5000L);
     }
 
-    private void aVW() {
+    private void bnL() {
         String str = null;
-        switch (this.enD) {
+        switch (this.fed) {
             case 1:
                 str = this.mPageContext.getPageActivity().getString(a.i.ala_share_tip_sina_weibo);
                 break;
@@ -340,21 +339,21 @@ public class d {
                 str = this.mPageContext.getPageActivity().getString(a.i.ala_share_tip_qq);
                 break;
         }
-        this.enC.setText(str);
+        this.fec.setText(str);
     }
 
-    public void aVX() {
-        if (this.enB.getParent() != null) {
-            ((ViewGroup) this.enB.getParent()).removeView(this.enB);
+    public void bnM() {
+        if (this.feb.getParent() != null) {
+            ((ViewGroup) this.feb.getParent()).removeView(this.feb);
         }
     }
 
-    public void aVY() {
-        SharedPrefHelper.getInstance().putInt("prepare_share_type", this.enD);
+    public void bnN() {
+        SharedPrefHelper.getInstance().putInt("prepare_share_type", this.fed);
     }
 
     public void release() {
-        this.enD = -1;
+        this.fed = -1;
         if (this.mHandler != null) {
             this.mHandler.removeCallbacksAndMessages(null);
         }
