@@ -22,7 +22,8 @@ import com.baidu.tbadk.core.TbadkCoreApplication;
 import com.baidu.tbadk.core.atomData.QRCodeScanActivityConfig;
 import com.baidu.tbadk.core.atomData.TbWebViewActivityConfig;
 import com.baidu.tbadk.core.util.aq;
-import com.baidu.tbadk.core.util.c.a;
+import com.baidu.tbadk.core.util.b.a;
+import com.baidu.tbadk.core.util.ba;
 import com.baidu.tbadk.core.util.x;
 import com.baidu.tieba.R;
 import com.baidu.tieba.qrcode.lib.core.QRCodeView;
@@ -30,107 +31,106 @@ import com.baidu.tieba.ueg.c;
 import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import org.apache.http.protocol.HTTP;
 import org.json.JSONException;
 import org.json.JSONObject;
-/* loaded from: classes5.dex */
+/* loaded from: classes7.dex */
 public class b implements QRCodeView.a {
-    private com.baidu.tieba.ueg.c gYJ;
-    private boolean iDL;
-    private final com.baidu.tieba.qrcode.activity.a iDS;
-    private c iDT;
-    private C0496b iDU;
+    private com.baidu.tieba.ueg.c hNe;
+    private boolean jyf;
+    private final com.baidu.tieba.qrcode.activity.a jym;
+    private c jyn;
+    private C0580b jyo;
     private final TbPageContext mTbPageContext;
 
     public b(com.baidu.tieba.qrcode.activity.a aVar, TbPageContext tbPageContext) {
-        this.iDS = aVar;
+        this.jym = aVar;
         this.mTbPageContext = tbPageContext;
     }
 
-    public void pY(boolean z) {
-        this.iDL = z;
+    public void rH(boolean z) {
+        this.jyf = z;
     }
 
     @Override // com.baidu.tieba.qrcode.lib.core.QRCodeView.a
-    public void Ci(String str) {
+    public void GX(String str) {
         if (StringUtils.isNull(str)) {
-            this.iDS.ceL();
-            this.iDS.ceJ();
-        } else if (this.iDL) {
+            this.jym.cyR();
+            this.jym.cyP();
+        } else if (this.jyf) {
             Intent intent = new Intent();
             intent.putExtra(QRCodeScanActivityConfig.RESULT_SCAN_CODE, str);
             this.mTbPageContext.getPageActivity().setResult(-1, intent);
             this.mTbPageContext.getPageActivity().finish();
-        } else if (Cl(str)) {
-            this.iDS.ceL();
+        } else if (Ha(str)) {
+            this.jym.cyR();
         } else if (!StringUtils.isNull(str) && str.contains("feedavatar.baidu.com")) {
-            this.iDS.ceL();
-            Cm(str);
-        } else if (Ck(str)) {
-            this.iDS.ceL();
+            this.jym.cyR();
+            Hb(str);
+        } else if (GZ(str)) {
+            this.jym.cyR();
             this.mTbPageContext.getPageActivity().finish();
-        } else if (!aq.nT(str)) {
-            this.iDS.ceL();
-            this.iDS.ceJ();
+        } else if (!aq.tf(str)) {
+            this.jym.cyR();
+            this.jym.cyP();
         } else {
-            Cj(str);
+            GY(str);
         }
     }
 
-    private void Cj(final String str) {
+    private void GY(final String str) {
         if (!l.isNetOk()) {
-            this.iDS.ceL();
+            this.jym.cyR();
             l.showToast(this.mTbPageContext.getPageActivity(), this.mTbPageContext.getResources().getString(R.string.network_not_available));
             return;
         }
-        if (this.gYJ != null && !this.gYJ.isCancelled()) {
-            this.gYJ.cancel();
+        if (this.hNe != null && !this.hNe.isCancelled()) {
+            this.hNe.cancel();
         }
-        this.gYJ = new com.baidu.tieba.ueg.c(str, new c.a() { // from class: com.baidu.tieba.qrcode.activity.b.1
+        this.hNe = new com.baidu.tieba.ueg.c(str, new c.a() { // from class: com.baidu.tieba.qrcode.activity.b.1
             @Override // com.baidu.tieba.ueg.c.a
-            public void bGF() {
-                b.this.iDS.ceL();
+            public void bYa() {
+                b.this.jym.cyR();
                 b.this.openUrl(str);
             }
 
             @Override // com.baidu.tieba.ueg.c.a
-            public void bGG() {
-                b.this.iDS.ceL();
-                b.this.iDS.Ch(str);
+            public void bYb() {
+                b.this.jym.cyR();
+                b.this.jym.GW(str);
             }
 
             @Override // com.baidu.tieba.ueg.c.a
-            public void bGH() {
-                b.this.iDS.ceL();
-                b.this.iDS.ceM();
+            public void bYc() {
+                b.this.jym.cyR();
+                b.this.jym.cyS();
             }
 
             @Override // com.baidu.tieba.ueg.c.a
             public void onError(String str2) {
-                b.this.iDS.ceL();
-                b.this.iDS.ceJ();
+                b.this.jym.cyR();
+                b.this.jym.cyP();
             }
         });
-        this.gYJ.setPriority(3);
-        this.gYJ.execute(new String[0]);
+        this.hNe.setPriority(3);
+        this.hNe.execute(new String[0]);
     }
 
     public void openUrl(String str) {
-        MessageManager.getInstance().sendMessage(new CustomMessage((int) CmdConfigCustom.START_GO_ACTION, new TbWebViewActivityConfig(this.mTbPageContext.getPageActivity(), null, str, false)));
+        ba.aEa().b(this.mTbPageContext, new String[]{str});
         this.mTbPageContext.getPageActivity().finish();
     }
 
-    private boolean Ck(String str) {
+    private boolean GZ(String str) {
         CustomResponsedMessage runTask = MessageManager.getInstance().runTask(CmdConfigCustom.CMD_QR_CODE_LOGIN, null, str);
         return runTask != null && runTask.getData() != null && (runTask.getData() instanceof Boolean) && ((Boolean) runTask.getData()).booleanValue();
     }
 
-    private boolean Cl(String str) {
+    private boolean Ha(String str) {
         if (StringUtils.isNULL(str)) {
             return false;
         }
         if (str.startsWith("tiebaclient:")) {
-            Co(str);
+            Hd(str);
             return true;
         } else if (str.contains("smartapp.baidu.com/mappconsole/api/packagescheme") || str.contains("mappconsole/api/packagescheme")) {
             new a().execute(str);
@@ -140,7 +140,7 @@ public class b implements QRCodeView.a {
         }
     }
 
-    private void Cm(String str) {
+    private void Hb(String str) {
         CookieSyncManager.createInstance(this.mTbPageContext.getPageActivity());
         CookieManager cookieManager = CookieManager.getInstance();
         cookieManager.setAcceptCookie(true);
@@ -151,61 +151,61 @@ public class b implements QRCodeView.a {
     }
 
     @Override // com.baidu.tieba.qrcode.lib.core.QRCodeView.a
-    public void ceN() {
+    public void cyT() {
         l.showToast(this.mTbPageContext.getPageActivity(), (int) R.string.disallow_camera_permission);
         this.mTbPageContext.getPageActivity().finish();
     }
 
-    public void Cn(String str) {
+    public void Hc(String str) {
         if (!StringUtils.isNull(str)) {
-            this.iDS.ceK();
-            if (this.iDT != null) {
-                this.iDT.cancel();
+            this.jym.cyQ();
+            if (this.jyn != null) {
+                this.jyn.cancel();
             }
-            this.iDT = new c();
-            this.iDT.execute(str);
+            this.jyn = new c();
+            this.jyn.execute(str);
         }
     }
 
-    public void ceO() {
+    public void cyU() {
         if (this.mTbPageContext != null && this.mTbPageContext.getPageActivity() != null) {
             if (Build.VERSION.SDK_INT < 23 || (this.mTbPageContext.getPageActivity().checkSelfPermission("android.permission.WRITE_EXTERNAL_STORAGE") == 0 && this.mTbPageContext.getPageActivity().checkSelfPermission("android.permission.READ_EXTERNAL_STORAGE") == 0)) {
                 String b = b(this.mTbPageContext.getPageActivity().getContentResolver());
-                if (!TextUtils.isEmpty(b) && !b.endsWith(".gif") && !b.endsWith(".GIF") && !b.equals(com.baidu.tbadk.core.sharedPref.b.alP().getString("key_gallery_last_image_path", null))) {
-                    if (this.iDU != null) {
-                        this.iDU.cancel();
+                if (!TextUtils.isEmpty(b) && !b.endsWith(".gif") && !b.endsWith(".GIF") && !b.equals(com.baidu.tbadk.core.sharedPref.b.aCY().getString("key_gallery_last_image_path", null))) {
+                    if (this.jyo != null) {
+                        this.jyo.cancel();
                     }
-                    this.iDU = new C0496b(new C0496b.a() { // from class: com.baidu.tieba.qrcode.activity.b.2
-                        @Override // com.baidu.tieba.qrcode.activity.b.C0496b.a
-                        public void dI(String str, String str2) {
+                    this.jyo = new C0580b(new C0580b.a() { // from class: com.baidu.tieba.qrcode.activity.b.2
+                        @Override // com.baidu.tieba.qrcode.activity.b.C0580b.a
+                        public void eb(String str, String str2) {
                             if (!TextUtils.isEmpty(str)) {
-                                com.baidu.tbadk.core.sharedPref.b.alP().putString("key_gallery_last_image_path", str);
+                                com.baidu.tbadk.core.sharedPref.b.aCY().putString("key_gallery_last_image_path", str);
                                 if (!TextUtils.isEmpty(str2)) {
-                                    b.this.iDS.dH(str, str2);
+                                    b.this.jym.ea(str, str2);
                                 }
                             }
                         }
                     });
-                    this.iDU.execute(b);
+                    this.jyo.execute(b);
                 }
             }
         }
     }
 
     /* renamed from: com.baidu.tieba.qrcode.activity.b$b  reason: collision with other inner class name */
-    /* loaded from: classes5.dex */
-    public static class C0496b extends BdAsyncTask<String, Void, String> {
+    /* loaded from: classes7.dex */
+    public static class C0580b extends BdAsyncTask<String, Void, String> {
         private String filePath;
-        private a iDX;
+        private a jyr;
 
         /* renamed from: com.baidu.tieba.qrcode.activity.b$b$a */
-        /* loaded from: classes5.dex */
+        /* loaded from: classes7.dex */
         public interface a {
-            void dI(String str, String str2);
+            void eb(String str, String str2);
         }
 
-        public C0496b(a aVar) {
-            this.iDX = aVar;
+        public C0580b(a aVar) {
+            this.jyr = aVar;
         }
 
         /* JADX DEBUG: Method merged with bridge method */
@@ -216,21 +216,21 @@ public class b implements QRCodeView.a {
                 return null;
             }
             this.filePath = strArr[0];
-            return com.baidu.tieba.qrcode.lib.zxing.a.Cp(this.filePath);
+            return com.baidu.tieba.qrcode.lib.zxing.a.He(this.filePath);
         }
 
         /* JADX DEBUG: Method merged with bridge method */
         /* JADX INFO: Access modifiers changed from: protected */
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         public void onPostExecute(String str) {
-            super.onPostExecute((C0496b) str);
-            if (this.iDX != null) {
-                this.iDX.dI(this.filePath, str);
+            super.onPostExecute((C0580b) str);
+            if (this.jyr != null) {
+                this.jyr.eb(this.filePath, str);
             }
         }
     }
 
-    /* JADX DEBUG: Don't trust debug lines info. Repeating lines: [335=7, 336=6] */
+    /* JADX DEBUG: Don't trust debug lines info. Repeating lines: [334=7, 335=6] */
     private String b(ContentResolver contentResolver) {
         String str;
         Cursor cursor = null;
@@ -296,20 +296,20 @@ public class b implements QRCodeView.a {
     }
 
     public void onDestroy() {
-        if (this.gYJ != null && !this.gYJ.isCancelled()) {
-            this.gYJ.cancel();
+        if (this.hNe != null && !this.hNe.isCancelled()) {
+            this.hNe.cancel();
         }
-        if (this.iDT != null) {
-            this.iDT.cancel();
-            this.iDT = null;
+        if (this.jyn != null) {
+            this.jyn.cancel();
+            this.jyn = null;
         }
-        if (this.iDU != null) {
-            this.iDU.cancel();
-            this.iDU = null;
+        if (this.jyo != null) {
+            this.jyo.cancel();
+            this.jyo = null;
         }
     }
 
-    /* loaded from: classes5.dex */
+    /* loaded from: classes7.dex */
     private class c extends BdAsyncTask<String, Void, String> {
         private c() {
         }
@@ -318,7 +318,7 @@ public class b implements QRCodeView.a {
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         public void onPreExecute() {
             super.onPreExecute();
-            b.this.iDS.ceK();
+            b.this.jym.cyQ();
         }
 
         /* JADX DEBUG: Method merged with bridge method */
@@ -328,7 +328,7 @@ public class b implements QRCodeView.a {
             if (strArr == null || strArr.length <= 0) {
                 return null;
             }
-            return com.baidu.tieba.qrcode.lib.zxing.a.Cp(strArr[0]);
+            return com.baidu.tieba.qrcode.lib.zxing.a.He(strArr[0]);
         }
 
         /* JADX DEBUG: Method merged with bridge method */
@@ -336,13 +336,13 @@ public class b implements QRCodeView.a {
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         public void onPostExecute(String str) {
             super.onPostExecute((c) str);
-            b.this.iDS.ceL();
-            b.this.Ci(str);
+            b.this.jym.cyR();
+            b.this.GX(str);
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    /* loaded from: classes5.dex */
+    /* loaded from: classes7.dex */
     public class a extends BdAsyncTask<String, Void, String> {
         private a() {
         }
@@ -371,25 +371,25 @@ public class b implements QRCodeView.a {
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         public void onPostExecute(String str) {
             super.onPostExecute((a) str);
-            b.this.Co(str);
+            b.this.Hd(str);
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void Co(final String str) {
+    public void Hd(final String str) {
         if (!StringUtils.isNull(str) && str.startsWith("tiebaclient:")) {
             if (Build.VERSION.SDK_INT <= 21) {
                 l.showToast(this.mTbPageContext.getPageActivity(), (int) R.string.ai_apps_not_support);
                 return;
             }
-            com.baidu.tbadk.core.util.c.a aVar = new com.baidu.tbadk.core.util.c.a();
+            com.baidu.tbadk.core.util.b.a aVar = new com.baidu.tbadk.core.util.b.a();
             aVar.clearRequestPermissionList();
             aVar.appendRequestPermission(this.mTbPageContext.getPageActivity(), "android.permission.WRITE_EXTERNAL_STORAGE");
-            aVar.a(new a.InterfaceC0279a() { // from class: com.baidu.tieba.qrcode.activity.b.3
-                @Override // com.baidu.tbadk.core.util.c.a.InterfaceC0279a
+            aVar.a(new a.InterfaceC0366a() { // from class: com.baidu.tieba.qrcode.activity.b.3
+                @Override // com.baidu.tbadk.core.util.b.a.InterfaceC0366a
                 public void onPermissionsGranted() {
                     try {
-                        MessageManager.getInstance().sendMessage(new CustomMessage(2921361, URLDecoder.decode(str, HTTP.UTF_8)));
+                        MessageManager.getInstance().sendMessage(new CustomMessage(2921361, URLDecoder.decode(str, "UTF-8")));
                         b.this.mTbPageContext.getPageActivity().finish();
                     } catch (UnsupportedEncodingException e) {
                     }
